--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,6 +19,8 @@ website:
       menu:
         - text: "Take-Home Exercise 1"
           href: "Take-Home_Ex/Take-Home_Ex01/Take-Home_Ex01.html"
+        - text: "Take-Home Exercise 1 Part 2"
+          href: "Take-Home_Ex/Take-Home_Ex01_Part2/Take-Home_Ex01_Part2.html"
 
     right:
       - href: index.qmd
