--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,8 +2,10 @@ project:
   type: website
 
 website:
+  favicon: "images/Peachu_Goma.png"
   title: "ISS608-VAA"
   navbar:
+    logo: "images/Peachu_Goma.png"
     left:
     - text: "Hands-on Exercise"
       menu:
@@ -15,6 +17,8 @@ website:
           href: "Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03.html"
         - text: "Hands-on Exercise 4"
           href: "Hands-on_Ex/Hands-on_Ex04/Hands-on_Ex04.html"
+        - text: "Hands-on Exercise 5"
+          href: "Hands-on_Ex/Hands-on_Ex05/Hands-on_Ex05.html"
     - text: "Take-Home Exercises"
       menu:
         - text: "Take-Home Exercise 1"
