--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,12 +19,18 @@ website:
           href: "Hands-on_Ex/Hands-on_Ex04/Hands-on_Ex04.html"
         - text: "Hands-on Exercise 5"
           href: "Hands-on_Ex/Hands-on_Ex05/Hands-on_Ex05.html"
+        - text: "Hands-on Exercise 6"
+          href: "Hands-on_Ex/Hands-on_Ex06/Hands-on_Ex06.html"
     - text: "Take-Home Exercises"
       menu:
         - text: "Take-Home Exercise 1"
           href: "Take-Home_Ex/Take-Home_Ex01/Take-Home_Ex01.html"
         - text: "Take-Home Exercise 1 Part 2"
           href: "Take-Home_Ex/Take-Home_Ex01/Take-Home_Ex01_Part2.html"
+    - text: "In-Class Exercises"
+      menu:
+        - text: "In-Class Exercise 5"
+          href: "In-class_Ex/In-class_Ex05/MC1_In-class_Ex05.html"
 
     right:
       - href: index.qmd
