--- a/_quarto.yml
+++ b/_quarto.yml
@@ -41,6 +41,8 @@ website:
       menu:
         - text: "In-Class Exercise 5"
           href: "In-class_Ex/In-class_Ex05/MC1_In-class_Ex05.html"
+        - text: "In-Class Exercise 10"
+          href: "In-class_Ex/In-class_Ex10/In-class_Ex10_SGStocks.html"
 
     right:
       - href: index.qmd
